Make the document valid XHTML

--- a/supero.htm
+++ b/supero.htm
@@ -1,5 +1,8 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN"
+        "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html>
     <head>
+        <meta http-equiv="Content-Type" content="text/html;charset=utf-8" />
         <title>Super Optimisation for Haskell</title>
         <style type="text/css">
 pre {
@@ -60,9 +63,7 @@ h3 {
     This document presents a reasoned account of the optimisation technique that is used by the <i>Supero</i> tool. The principles behind the optimisation techniques are discussed, along with practical motivation, and bounds on the power of this optimisation. The rules produced in this document are very similar to Philip Wadlers <a href="http://homepages.inf.ed.ac.uk/wadler/topics/deforestation.html">"Deforestation: transforming programs to eliminate trees"</a>, although was derived independantly, and covers more than merely deforestation.
 </p>
 <p>
-</p>
     This document proceeds as follows:
-<p>
 </p>
 <ol>
     <li>Introduction to the Yhc.Core language</li>
